# sqlqs

./: .gitignore  astro.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-desktop.yml  release-desktop.yml
scripts/: bump-version.mjs
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  settings.rs  sql_gen.rs
src/components/: AIChatPanel.tsx  App.tsx  ColumnSelector.tsx  ConfirmDialog.tsx  ConnectionDialog.tsx  ContextMenu.tsx  Dropdown.tsx  EmptyState.tsx  Icons.tsx  Input.tsx  ObjectExplorer.tsx  ObjectJumpPalette.tsx  QueryEditorPanel.tsx  ResultsGrid.tsx  RowActionsDialog.tsx  SettingsDialog.tsx  SettingsView.tsx  SqlEditor.tsx  TitleBar.tsx  ToolsPopup.tsx  Tooltip.tsx  UpdateDialog.tsx  objectExplorerObjectMenu.tsx
src/hooks/: useAppUpdater.ts  useConnection.ts  useHistory.ts  useSavedQueries.ts  useTabs.ts
src/layouts/: Layout.astro
src/lib/: ai-tools.ts  ai.ts  path.ts  platform.ts  settings.ts  sql.ts  theme.ts  types.ts
src/pages/: index.astro
src/styles/: base.css  components.css  editor.css  global.css
src/themes/: dark.json  dracula.json  light.json  midnight.json  oled.json  soft-light.json
