[package]
name = "sqlqs"
version = "0.1.12"
description = "SQL Query Studio"
authors = ["Cristian Militaru"]
edition = "2021"

[lib]
name = "sqlqs_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "sql-browser-tokio", "winauth", "chrono", "rust_decimal"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["compat"] }
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }
